applications/task-tracker-app/overlays/staging/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: staging
  labels:
    istio-injection: enabled
    cert-manager-tls: staging # Define namespace label for kubed
