applications/task-tracker-app/overlays/staging/istio-gateway.yaml
apiVersion: networking.istio.io/v1alpha3
kind: Gateway
metadata:
  name: default-gateway
spec:
  selector:
    istio: ingressgateway
  servers:
    - port:      
        number: 80
        name: http 
        protocol: HTTP
      hosts:    
        - "*"
    - port:
        number: 443
        name: https
        protocol: HTTPS
      tls:
        mode: SIMPLE
        credentialName: tls-secret
      hosts:
        - "staging.mlops-playground.com"
